src/objects/Partner_Product_Version__c.object
<CustomObject>
    <description>Tracks the versions of a product</description>
    <fields>
        <fullName>End_of_Life_Partner__c</fullName>
        <description>Date of which the Partner is ending of life-ing the product.</description>
        <label>End of Life</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name_Partner__c</fullName>
        <label>Product Name</label>
        <referenceTo>Partner_Product__c</referenceTo>
        <relationshipLabel>Product Versions</relationshipLabel>
        <relationshipName>Partner_Product_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Date_Partner__c</fullName>
        <description>Release date of the version</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <label>Partner Product Version</label>
    <nameField>
        <label>Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Product Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>